--- a/course/course/mainwindow.ui
+++ b/course/course/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MyCLoudRender</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
       <x>970</x>
