--- a/course/course/mainwindow.ui
+++ b/course/course/mainwindow.ui
@@ -43,7 +43,7 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>940</x>
+      <x>950</x>
       <y>10</y>
       <width>281</width>
       <height>921</height>
@@ -61,7 +61,7 @@
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>200</height>
+         <height>250</height>
         </size>
        </property>
        <property name="currentIndex">
@@ -69,31 +69,70 @@
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
-         <string>Рандом</string>
+         <string>Примеры</string>
         </attribute>
         <widget class="QPushButton" name="pushButton_2">
          <property name="geometry">
           <rect>
-           <x>0</x>
-           <y>60</y>
-           <width>261</width>
-           <height>61</height>
+           <x>30</x>
+           <y>30</y>
+           <width>221</width>
+           <height>31</height>
           </rect>
          </property>
          <property name="text">
           <string>Сгенерировать рандомно</string>
          </property>
         </widget>
+        <widget class="QPushButton" name="pushButton">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>70</y>
+           <width>221</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>PushButton</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>100</y>
+           <width>221</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>PushButton</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="pushButton_4">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>130</y>
+           <width>221</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>PushButton</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QWidget" name="tab_2">
         <attribute name="title">
-         <string>Настроить</string>
+         <string>Пользовательские</string>
         </attribute>
         <widget class="QLabel" name="label_3">
          <property name="geometry">
           <rect>
-           <x>0</x>
-           <y>10</y>
+           <x>10</x>
+           <y>20</y>
            <width>221</width>
            <height>17</height>
           </rect>
@@ -124,7 +163,7 @@
              <number>5</number>
             </property>
             <property name="value">
-             <number>100</number>
+             <number>30</number>
             </property>
            </widget>
           </item>
@@ -154,7 +193,7 @@
              <number>5</number>
             </property>
             <property name="value">
-             <number>20</number>
+             <number>100</number>
             </property>
            </widget>
           </item>
@@ -190,135 +229,154 @@
           </item>
          </layout>
         </widget>
+        <widget class="QSlider" name="densitySlider">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>190</y>
+           <width>241</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>11</pointsize>
+           <stylestrategy>PreferDefault</stylestrategy>
+          </font>
+         </property>
+         <property name="mouseTracking">
+          <bool>true</bool>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::ClickFocus</enum>
+         </property>
+         <property name="minimum">
+          <number>-20</number>
+         </property>
+         <property name="maximum">
+          <number>20</number>
+         </property>
+         <property name="pageStep">
+          <number>1</number>
+         </property>
+         <property name="sliderPosition">
+          <number>0</number>
+         </property>
+         <property name="tracking">
+          <bool>true</bool>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="invertedAppearance">
+          <bool>false</bool>
+         </property>
+         <property name="invertedControls">
+          <bool>false</bool>
+         </property>
+         <property name="tickPosition">
+          <enum>QSlider::NoTicks</enum>
+         </property>
+         <property name="tickInterval">
+          <number>1</number>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>170</y>
+           <width>251</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Плотность облаков</string>
+         </property>
+        </widget>
        </widget>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>200</height>
+         <height>243</height>
         </size>
        </property>
        <property name="title">
-        <string>Настройки</string>
+        <string>Параметры облака</string>
        </property>
-       <widget class="QLabel" name="label_2">
+       <widget class="QTextEdit" name="main_list">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>0</x>
           <y>30</y>
-          <width>251</width>
-          <height>17</height>
+          <width>279</width>
+          <height>200</height>
          </rect>
-        </property>
-        <property name="text">
-         <string>Плотность облаков</string>
-        </property>
-       </widget>
-       <widget class="QSlider" name="densitySlider">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>50</y>
-          <width>241</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>16777215</height>
+          <height>200</height>
          </size>
         </property>
-        <property name="font">
-         <font>
-          <pointsize>11</pointsize>
-          <stylestrategy>PreferDefault</stylestrategy>
-         </font>
-        </property>
-        <property name="mouseTracking">
+        <property name="readOnly">
          <bool>true</bool>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
-        </property>
-        <property name="minimum">
-         <number>-20</number>
-        </property>
-        <property name="maximum">
-         <number>20</number>
-        </property>
-        <property name="pageStep">
-         <number>1</number>
-        </property>
-        <property name="sliderPosition">
-         <number>0</number>
-        </property>
-        <property name="tracking">
-         <bool>true</bool>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="invertedAppearance">
-         <bool>false</bool>
-        </property>
-        <property name="invertedControls">
-         <bool>false</bool>
-        </property>
-        <property name="tickPosition">
-         <enum>QSlider::NoTicks</enum>
-        </property>
-        <property name="tickInterval">
-         <number>1</number>
         </property>
        </widget>
       </widget>
      </item>
      <item>
-      <widget class="QTextEdit" name="main_list">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
+      <widget class="QGroupBox" name="groupBox_2">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>200</height>
+         <height>250</height>
         </size>
        </property>
-       <property name="readOnly">
-        <bool>true</bool>
+       <property name="title">
+        <string>Коэфиценты преобразований</string>
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QTextEdit" name="settings_list">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>200</height>
-        </size>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
+       <widget class="QTextEdit" name="settings_list">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>30</y>
+          <width>279</width>
+          <height>200</height>
+         </rect>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>200</height>
+         </size>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
       </widget>
      </item>
      <item>
