--- a/course/course/mainwindow.ui
+++ b/course/course/mainwindow.ui
@@ -65,7 +65,7 @@
         </size>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="tab_2">
         <attribute name="title">
@@ -353,7 +353,7 @@
         </size>
        </property>
        <property name="title">
-        <string>Коэфиценты преобразований</string>
+        <string>Коэффициенты преобразований</string>
        </property>
        <widget class="QTextEdit" name="settings_list">
         <property name="enabled">
